<resources>
    <string name="app_name">Sports</string>
    <string name="login_SubTitle">Join Sport Games in your area</string>
    <string name="sign_In_button">Sign In</string>
    <string name="login_btn">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="login_label">Login</string>
    <string name="signIn_label">Sign in</string>
    <string name="createAccount_label">Create Account</string>
    <string name="signIn_back_button">Back</string>
    <string name="signIn_email_hint">Email Address</string>
    <string name="signIn_password_hint">Password</string>
    <string name="firstName_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>
    <string name="Nickname_hint">Nickname</string>
    <string name="postalCode_hint">Postal Code</string>
    <string name="yourselfDesc_hint">Write something about yourself</string>
    <string name="createAccount_nextBtn">Next</string>
    <string name="sportsDone_btn">Done</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_image_intent_text">Add Photo</string>
    <string name="message_fragment_title">Messages</string>
    <string name="contact_fragment_contact_title">Contact</string>
    <string name="contact_fragment_msg_title">Message</string>
    <string name="find_game_title">Find Games</string>
    <string name="create_game_event">Event Name</string>
    <string name="create_game_cost">Cost</string>
    <string name="create_game_activity_title">Start Event</string>
    <string name="create_game_time_set">Set date, time</string>
    <string name="create_game_Male">Male</string>
    <string name="create_game_Female">Female</string>
    <string name="create_game_Coed">Co-ed</string>
    <string name="max_players">Max players</string>
    <string name="min_players">Min players</string>
    <string name="create_game_Location">Enter game location</string>
    <string name="create_game_start_event">Create Event</string>
    <string name="create_game_map_address_title">Address: </string>
    <string name="error_select_sport">Please select a sport game</string>
    <string name="error_gender_select">Please select your gender</string>
    <string name="error_game_time">Please set the game time/date</string>
    <string name="info_window_game_date_time">DATE &amp; TIME</string>
    <string name="info_window_game_cost">COVER CHARGE</string>
    <string name="info_window_attending">ATTENDING</string>
    <string name="info_window_gender">GENDER</string>
    <string name="join_game">JOIN or leave GAME</string>
    <string name="leave_game">LEAVE GAME</string>
    <string name="confirmed_players">Confirmed Players</string>
    <string name="menu_logout">Logout</string>
</resources>
