<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".sign_in.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginLayoutID"
        android:layout_centerHorizontal="true">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginTitleID"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"
        android:textSize="40sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signInTextInputLayOutID"
        android:layout_marginTop="10dp"
        android:layout_below="@id/loginLayoutID"
        android:layout_weight="1">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="left"
            android:inputType="textEmailAddress"
            android:id="@+id/signInEmailID"
            android:hint="@string/signIn_email_hint"
            android:paddingTop="60dp"
            android:maxLines="1">
        </EditText>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="left"
            android:password="true"
            android:layout_below="@id/signInEmailID"
            android:id="@+id/signInPasswordID"
            android:hint="@string/signIn_password_hint"
            android:maxLines="1">
        </EditText>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signInButtonID"
        android:text="@string/login_btn"
        android:onClick="attemptLogIn"
        android:layout_below="@id/loginLayoutID"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createAccountButtonID"
        android:text="@string/create_account_button"
        android:textAllCaps="true"
        android:onClick="createAccount"
        android:layout_below="@id/signInButtonID"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
